--- a/mock-test3.html
+++ b/mock-test3.html
@@ -75,57 +75,110 @@
   </div>
 
   <script>
+//     const questions = [
+//   { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
+//   { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
+//   { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
+//   { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
+//   { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
+//   { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
+//   { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
+//   { q: "Which is not included in prime cost?", options: ['Direct materials', 'Direct wages', 'Factory overheads', 'Direct expenses'], answer: 2 },
+//   { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
+//   { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
+//   { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
+//   { q: "Which is not included in prime cost?", options: ['Direct materials', 'Direct wages', 'Factory overheads', 'Direct expenses'], answer: 2 },
+//   { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
+//   { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
+//   { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
+//   { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+//   { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
+//   { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
+//   { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
+//   { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+//   { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
+//   { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
+//   { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
+//   { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
+//   { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
+//   { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+//   { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
+//   { q: "Which device stores electric charge?", options: ['Inductor', 'Capacitor', 'Transistor', 'Resistor'], answer: 1 },
+//   { q: "Which device stores electric charge?", options: ['Inductor', 'Capacitor', 'Transistor', 'Resistor'], answer: 1 },
+//   { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
+//   { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
+//   { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
+//   { q: "Which device stores electric charge?", options: ['Inductor', 'Capacitor', 'Transistor', 'Resistor'], answer: 1 },
+//   { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+//   { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
+//   { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
+//   { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+//   { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
+//   { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
+//   { q: "Which is not included in prime cost?", options: ['Direct materials', 'Direct wages', 'Factory overheads', 'Direct expenses'], answer: 2 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+//   { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
+//   { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
+//   { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
+//   { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+// ];
+
     const questions = [
-  { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
-  { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
-  { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
-  { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
-  { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
-  { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
-  { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
-  { q: "Which is not included in prime cost?", options: ['Direct materials', 'Direct wages', 'Factory overheads', 'Direct expenses'], answer: 2 },
-  { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
-  { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
-  { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
-  { q: "Which is not included in prime cost?", options: ['Direct materials', 'Direct wages', 'Factory overheads', 'Direct expenses'], answer: 2 },
-  { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
-  { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
-  { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
-  { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
-  { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
-  { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
-  { q: "Watt is the SI unit of:", options: ['Energy', 'Force', 'Power', 'Pressure'], answer: 2 },
-  { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
-  { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
-  { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
-  { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
-  { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
-  { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
-  { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
-  { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
-  { q: "Which device stores electric charge?", options: ['Inductor', 'Capacitor', 'Transistor', 'Resistor'], answer: 1 },
-  { q: "Which device stores electric charge?", options: ['Inductor', 'Capacitor', 'Transistor', 'Resistor'], answer: 1 },
-  { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
-  { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
-  { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
-  { q: "Which device stores electric charge?", options: ['Inductor', 'Capacitor', 'Transistor', 'Resistor'], answer: 1 },
-  { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
-  { q: "Break-even point is where:", options: ['Profit=0', 'Revenue=0', 'Cost=0', 'Loss=0'], answer: 0 },
-  { q: "In four stroke engine, power is produced in:", options: ['1 stroke', '2 strokes', '4 strokes', 'Every stroke'], answer: 0 },
-  { q: "The center of gravity of a triangle lies at the intersection of:", options: ['Altitudes', 'Medians', 'Bisectors', 'Diagonals'], answer: 1 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
-  { q: "Which fuel is used in Lancashire boiler?", options: ['Diesel', 'Coal', 'Wood', 'Kerosene'], answer: 1 },
-  { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
-  { q: "Which is not included in prime cost?", options: ['Direct materials', 'Direct wages', 'Factory overheads', 'Direct expenses'], answer: 2 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
-  { q: "The process with no heat exchange is:", options: ['Isothermal', 'Adiabatic', 'Isobaric', 'Isochoric'], answer: 1 },
-  { q: "SI Unit of force is:", options: ['Dyne', 'Newton', 'Joule', 'Pascal'], answer: 1 },
-  { q: "Efficiency of Carnot cycle depends on:", options: ['Temperature', 'Pressure', 'Volume', 'Mass'], answer: 0 },
-  { q: "Orthographic projection uses:", options: ['Parallel lines', 'Converging lines', 'Curved lines', 'None'], answer: 0 },
+  { q: "The second law of thermodynamics introduces the concept of:", options: ['Entropy', 'Enthalpy', 'Internal energy', 'Gibbs free energy'], answer: 0 },
+  { q: "The primary purpose of a governor in an engine is to:", options: ['Regulate speed', 'Increase torque', 'Reduce vibrations', 'Cool the system'], answer: 0 },
+  { q: "The SI unit of energy is:", options: ['Watt', 'Joule', 'Newton', 'Pascal'], answer: 1 },
+  { q: "In a four-stroke engine, the exhaust stroke occurs after:", options: ['Intake', 'Compression', 'Power', 'Ignition'], answer: 2 },
+  { q: "A cost that remains constant regardless of production level is:", options: ['Variable cost', 'Fixed cost', 'Marginal cost', 'Opportunity cost'], answer: 1 },
+  { q: "The centroid of a circle is located at its:", options: ['Edge', 'Center', 'Radius', 'Diameter'], answer: 1 },
+  { q: "A process where pressure remains constant is called:", options: ['Isothermal', 'Isobaric', 'Isochoric', 'Adiabatic'], answer: 1 },
+  { q: "The primary fuel for a Cochran boiler is typically:", options: ['Coal', 'Natural gas', 'Diesel', 'Wood'], answer: 0 },
+  { q: "In technical drawing, a section view is used to show:", options: ['External features', 'Internal details', '3D perspective', 'Scaled dimensions'], answer: 1 },
+  { q: "The device that converts electrical energy to mechanical energy is:", options: ['Generator', 'Motor', 'Transformer', 'Capacitor'], answer: 1 },
+  { q: "The efficiency of a heat engine is maximum when it operates between:", options: ['Same temperatures', 'Large temperature difference', 'Low pressures', 'High volumes'], answer: 1 },
+  { q: "The moment of inertia of an object depends on:", options: ['Mass distribution', 'Velocity', 'Temperature', 'Pressure'], answer: 0 },
+  { q: "The SI unit of torque is:", options: ['Newton-meter', 'Joule', 'Watt', 'Pascal'], answer: 0 },
+  { q: "In a diesel engine, ignition occurs due to:", options: ['Spark plug', 'Compression', 'Fuel injection', 'Glow plug'], answer: 1 },
+  { q: "The point where total revenue equals total cost is called:", options: ['Profit margin', 'Break-even point', 'Loss threshold', 'Revenue peak'], answer: 1 },
+  { q: "The center of gravity of a uniform rod lies at its:", options: ['One end', 'Midpoint', 'Quarter length', 'Entire length'], answer: 1 },
+  { q: "A thermodynamic process with constant temperature is:", options: ['Isobaric', 'Isochoric', 'Isothermal', 'Adiabatic'], answer: 2 },
+  { q: "The material commonly used for steam boiler tubes is:", options: ['Copper', 'Steel', 'Aluminum', 'Brass'], answer: 1 },
+  { q: "In engineering drawing, a hidden line represents:", options: ['Visible edge', 'Invisible edge', 'Centerline', 'Dimension line'], answer: 1 },
+  { q: "A device that regulates voltage in a circuit is:", options: ['Resistor', 'Capacitor', 'Transformer', 'Diode'], answer: 2 },
+  { q: "The work done in an isochoric process is:", options: ['Zero', 'Maximum', 'Negative', 'Constant'], answer: 0 },
+  { q: "The property that measures resistance to angular acceleration is:", options: ['Mass', 'Moment of inertia', 'Torque', 'Angular velocity'], answer: 1 },
+  { q: "The SI unit of electrical resistance is:", options: ['Ohm', 'Volt', 'Ampere', 'Coulomb'], answer: 0 },
+  { q: "In a two-stroke engine, power is produced in:", options: ['Every stroke', 'Every other stroke', 'Two strokes', 'Four strokes'], answer: 0 },
+  { q: "The cost of raw materials is considered a:", options: ['Fixed cost', 'Variable cost', 'Overhead cost', 'Sunk cost'], answer: 1 },
+  { q: "The center of gravity of a semicircle lies along its:", options: ['Base', 'Arc', 'Axis of symmetry', 'Perimeter'], answer: 2 },
+  { q: "A process where no work is done is typically:", options: ['Isobaric', 'Isochoric', 'Isothermal', 'Adiabatic'], answer: 1 },
+  { q: "The safety valve in a boiler is used to:", options: ['Release excess pressure', 'Control fuel flow', 'Regulate temperature', 'Increase steam flow'], answer: 0 },
+  { q: "In orthographic projection, the top view shows:", options: ['Height and width', 'Width and depth', 'Height and depth', 'All dimensions'], answer: 1 },
+  { q: "The device that stores energy in a magnetic field is:", options: ['Capacitor', 'Inductor', 'Resistor', 'Transistor'], answer: 1 },
+  { q: "The ideal gas law relates pressure, volume, and:", options: ['Mass', 'Temperature', 'Density', 'Viscosity'], answer: 1 },
+  { q: "The force that opposes relative motion between surfaces is:", options: ['Gravitational force', 'Frictional force', 'Magnetic force', 'Centrifugal force'], answer: 1 },
+  { q: "The SI unit of frequency is:", options: ['Hertz', 'Watt', 'Joule', 'Newton'], answer: 0 },
+  { q: "The compression ratio in an engine affects its:", options: ['Efficiency', 'Weight', 'Speed', 'Cooling'], answer: 0 },
+  { q: "The cost associated with factory utilities is an example of:", options: ['Direct cost', 'Variable cost', 'Overhead cost', 'Fixed cost'], answer: 2 },
+  { q: "The center of gravity of a cone lies along its:", options: ['Base', 'Apex', 'Axis', 'Slant height'], answer: 2 },
+  { q: "A process with constant entropy is called:", options: ['Isentropic', 'Isothermal', 'Isobaric', 'Isochoric'], answer: 0 },
+  { q: "The component in a boiler that superheats steam is:", options: ['Economizer', 'Superheater', 'Feed pump', 'Air preheater'], answer: 1 },
+  { q: "In technical drawing, an auxiliary view is used to show:", options: ['True shape of inclined surfaces', '3D perspective', 'Hidden edges', 'Overall dimensions'], answer: 0 },
+  { q: "The device that amplifies electrical signals is:", options: ['Diode', 'Capacitor', 'Transistor', 'Resistor'], answer: 2 },
+  { q: "The specific heat of a substance is measured at constant:", options: ['Volume or pressure', 'Mass or density', 'Temperature or volume', 'Pressure or entropy'], answer: 0 },
+  { q: "The force per unit area is defined as:", options: ['Stress', 'Strain', 'Torque', 'Power'], answer: 0 },
+  { q: "The SI unit of magnetic flux is:", options: ['Tesla', 'Weber', 'Gauss', 'Henry'], answer: 1 },
+  { q: "The stroke in a four-stroke engine where gases are compressed is:", options: ['Intake', 'Compression', 'Power', 'Exhaust'], answer: 1 },
+  { q: "The cost of depreciation is considered a:", options: ['Variable cost', 'Direct cost', 'Fixed cost', 'Marginal cost'], answer: 2 },
+  { q: "The center of gravity of a sphere is at its:", options: ['Surface', 'Center', 'Equator', 'Pole'], answer: 1 },
+  { q: "A process where no mass crosses the system boundary is:", options: ['Open system', 'Closed system', 'Isolated system', 'Adiabatic system'], answer: 1 },
+  { q: "The fusible plug in a boiler prevents:", options: ['Overheating', 'Low water level', 'Excess steam', 'Fuel wastage'], answer: 1 },
+  { q: "In engineering drawing, a centerline indicates:", options: ['Symmetry or axis', 'Hidden edge', 'Visible edge', 'Dimension'], answer: 0 },
+  { q: "The device that rectifies alternating current to direct current is:", options: ['Capacitor', 'Diode', 'Inductor', 'Transformer'], answer: 1 }
 ];
 
 
