--- a/index.html
+++ b/index.html
@@ -300,6 +300,10 @@
             <span class="tooltip">Gas laws, Carnot efficiency, thermodynamic processes</span>
         </div>
         <div class="card">
+            <a href="thermal.html">3. Thermodynamics II MCQs 50 </a>
+            <span class="tooltip">Gas laws, Carnot efficiency, thermodynamic processes</span>
+        </div>
+        <div class="card">
             <a href="industrial_management.html">4. Basic Industrial Management — 61 MCQs</a>
             <span class="tooltip">Labor laws, ILO, safety management</span>
         </div>
